# hearts

./: .gitignore  cabal.fish  format.fish  fourmolu.yaml  hearts.cabal  planning.org  readme.org  release.nix  shell.nix
app/: Main.hs
src/Hearts/: API.hs  Card.hs  Game.hs  Player.hs  Room.hs  Server.hs
src/Hearts/Game/: Event.hs  ID.hs
src/Hearts/Game/Player/: Event.hs
src/Hearts/Player/: Event.hs  Id.hs
static/: hearts.css  state.json
