cabal-version:      2.4
name:               hearts
version:            1.0.0
synopsis:           An implementation of the card game Hearts
license:            GPL-3.0-or-later
author:             Emily Bourke
copyright:          Emily Bourke
maintainer:         undergroundquizscene@protonmail.com

extra-source-files:
    README.md
    ChangeLog.md

library
  exposed-modules:
      Hearts.Game
      Hearts.Server
  other-modules:
      Hearts.API
      Hearts.Card
      Hearts.Game.Event
      Hearts.Player
      Hearts.Player.Event
      Hearts.Player.Id
      Hearts.Room
      Paths_hearts
  hs-source-dirs:
      src
  build-depends:
      aeson,
      base,
      containers,
      generic-lens,
      lens,
      random-shuffle,
      servant,
      servant-server,
      text,
      transformers,
      uuid,
      vector,
      wai-extra,
      warp,
  default-language: Haskell2010
  ghc-options: -Wall -Werror
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmissing-local-signatures
               -Wredundant-constraints
               -Wunused-packages

executable hearts-exe
  main-is: Main.hs
  other-modules:
      Paths_hearts
  hs-source-dirs:
      app
  ghc-options: -Wall -Werror
               -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      hearts,
  default-language: Haskell2010
